# bitgn_agent

./: .env_example  .gitignore  CLAUDE.md  LICENSE  README.md  agent.py  main.py  pyproject.toml  run_eval.py
.agnets/skills/new-prototype/: SKILL.md
configs/: baseline.yaml  baseline_sandbox.yaml  react_deepagents_v1.yaml  react_langchain.yaml  react_langchain_v1.yaml  react_langchain_v10.yaml  react_langchain_v11.yaml  react_langchain_v12.yaml  react_langchain_v13.yaml  react_langchain_v14.yaml  react_langchain_v15.yaml  react_langchain_v16.yaml  react_langchain_v17.yaml  react_langchain_v18.yaml  react_langchain_v19.yaml  react_langchain_v2.yaml  react_langchain_v20.yaml  react_langchain_v21.yaml  react_langchain_v22.yaml  react_langchain_v23.yaml  react_langchain_v24.yaml  react_langchain_v25.yaml  react_langchain_v26.yaml  react_langchain_v26_prod.yaml  react_langchain_v3.yaml  react_langchain_v4.yaml  react_langchain_v5.yaml  react_langchain_v6.yaml  react_langchain_v7.yaml  react_langchain_v7_prod.yaml  react_langchain_v8.yaml  react_langchain_v9.yaml
docs/superpowers/plans/: 2026-03-21-prototype-eval-env.md  2026-03-23-braintrust-tracing.md
docs/superpowers/specs/: 2026-03-21-prototype-eval-env-design.md  2026-03-23-braintrust-tracing-design.md
eval/: run_logger.py  runner.py  tool_logger.py
prototypes/: __init__.py  base.py
prototypes/baseline/: agent.py
prototypes/react_deepagents_v1/: agent.py
prototypes/react_langchain/: agent.py
prototypes/react_langchain_v1/: agent.py
prototypes/react_langchain_v10/: agent.py
prototypes/react_langchain_v12/: agent.py
prototypes/react_langchain_v13/: agent.py
prototypes/react_langchain_v14/: agent.py
prototypes/react_langchain_v16/: agent.py
prototypes/react_langchain_v17/skills/: finance-ops.md  inbox-ops.md  relationship-ops.md
prototypes/react_langchain_v18/: agent.py
prototypes/react_langchain_v18/skills/: _index.md  knowledge-ops.md
prototypes/react_langchain_v19/skills/: communication-ops.md  document-ops.md
prototypes/react_langchain_v20/: agent.py
prototypes/react_langchain_v20/skills/: _index.md  channel-ops.md  (+1 more)
prototypes/react_langchain_v23/: agent.py
prototypes/react_langchain_v25/: agent.py
prototypes/react_langchain_v3/: agent.py
prototypes/react_langchain_v4/: agent.py
prototypes/react_langchain_v5/: agent.py
prototypes/react_langchain_v6/: agent.py
prototypes/react_langchain_v7/: agent.py
prototypes/react_langchain_v9/: agent.py
tests/: test_runner_langfuse_optional.py
(+12 files in other folders)
