[project]
name = "bitgn-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitgn-api-connectrpc-python>=0.9.0.1.20260316101438",
    "bitgn-api-protocolbuffers-python>=34.1.0.1.20260316101438",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.11",
    "openai>=2.29.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.7",
]

[project.optional-dependencies]
observability = [
    "langfuse>=4.0.1",
]

[[tool.uv.index]]
name = "buf"
url = "https://buf.build/gen/python"
